--- a/soLeSoChan/index.html
+++ b/soLeSoChan/index.html
@@ -50,7 +50,7 @@
                 <!--Grid row-->
 
                 <hr class="mb-4" />
-                <button class="btn btn-primary btn-lg btn-block" type="submit" id="btnResult">Xuất số nguyên tăng dần</button>
+                <button class="btn btn-primary btn-lg btn-block" type="submit" id="btnResult">Tính bao nhiêu chẵn lẻ</button>
               </form>
             </div>
             <!--/.Card-->
